[package]
name = "nusantara-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "nusantara"
path = "src/main.rs"

[dependencies]
nusantara-crypto.workspace = true
nusantara-core.workspace = true
nusantara-system-program.workspace = true
nusantara-stake-program.workspace = true
nusantara-vote-program.workspace = true
nusantara-rpc.workspace = true
nusantara-loader-program.workspace = true
borsh.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
base64.workspace = true
dirs.workspace = true
