[package]
name = "nusantara-compute-budget-program"
description = "Compute budget program for the Nusantara blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
nusantara-crypto.workspace = true
nusantara-core.workspace = true
borsh.workspace = true
thiserror.workspace = true
