[package]
name = "nusantara-crypto"
description = "Cryptographic library for the Nusantara blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
sha3.workspace = true
pqcrypto-dilithium.workspace = true
pqcrypto-traits.workspace = true
base64.workspace = true
borsh.workspace = true
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "crypto_bench"
harness = false
