[package]
name = "nusantara-gossip"
description = "CRDS-based gossip protocol for Nusantara peer discovery"
version.workspace = true
edition.workspace = true

[dependencies]
nusantara-crypto.workspace = true
nusantara-core.workspace = true
borsh.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
metrics.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
