[package]
name = "nusantara-sysvar-program"
description = "Sysvar program for the Nusantara blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
nusantara-crypto.workspace = true
nusantara-core.workspace = true
nusantara-rent-program.workspace = true
borsh.workspace = true
thiserror.workspace = true
