[package]
name = "nusantara-vm"
description = "WASM virtual machine for the Nusantara blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
nusantara-crypto.workspace = true
nusantara-core.workspace = true
wasmi.workspace = true
lru.workspace = true
thiserror.workspace = true
tracing.workspace = true
metrics.workspace = true
borsh.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tempfile.workspace = true
wat.workspace = true
